project migrated to the latest version of CUBA request entity added fields of the Request entity are set accordingly to some of the ExtUser fields, corresponding to active user

--- a/modules/global/src/com/company/extuser/entity/messages.properties
+++ b/modules/global/src/com/company/extuser/entity/messages.properties
@@ -5,3 +5,7 @@ Department.telephone = Telephone
 Department.roomNumber = Room Number
 Department = Department
 ExtUser.department = Department
+Request.text = Text
+Request.department = Department
+Request.user = User
+Request = Request
