--- a/modules/web/src/com/company/extuser/web/messages.properties
+++ b/modules/web/src/com/company/extuser/web/messages.properties
@@ -1,3 +1,4 @@
 menu-config.application = Application
 menu-config.about = About
 menu-config.extuser$Department.browse = Departments
+menu-config.extuser$Request.browse = Requests
