project migrated to the latest version of CUBA

--- a/modules/global/src/com/company/extuser/entity/messages.properties
+++ b/modules/global/src/com/company/extuser/entity/messages.properties
@@ -9,3 +9,6 @@ Request.text = Text
 Request.department = Department
 Request.user = User
 Request = Request
+Request.tags = Tags
+RequestTag.name = Name
+RequestTag = Request Tag
