--- a/modules/web/src/com/company/extuser/web/messages.properties
+++ b/modules/web/src/com/company/extuser/web/messages.properties
@@ -2,3 +2,4 @@ menu-config.application = Application
 menu-config.about = About
 menu-config.extuser$Department.browse = Departments
 menu-config.extuser$Request.browse = Requests
+menu-config.extuser$RequestTag.browse = Request Tags
